kit/tests/fixtures/new-java-capabilities/parse-error/head/app/Job.java
class Job {
    void run( {
        Runtime.getRuntime().exec("id");
    }
}
